[gd_scene load_steps=3 format=3 uid="uid://bnd1rpbhrolag"]

[ext_resource type="FontFile" uid="uid://ckqseea2vsqu8" path="res://interface/Fonts/Naturaly.otf" id="1_1scnk"]
[ext_resource type="Script" path="res://interface/welcome_sequence.gd" id="1_6qfoj"]

[node name="gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WelcomeSequence" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6qfoj")

[node name="WelcomePage1" type="Control" parent="WelcomeSequence"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Welcome_1" type="CenterContainer" parent="WelcomeSequence/WelcomePage1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WelcomeSequence/WelcomePage1/Welcome_1"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="WelcomeSequence/WelcomePage1/Welcome_1/VBoxContainer"]
custom_minimum_size = Vector2(1250, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 65
text = "Welcome to My Penguin Park! You have inherited your uncle’s run-down penguin exhibit. It’s up to you to bring it back to its former glory. "
horizontal_alignment = 1
autowrap_mode = 3

[node name="NextButton1" type="Button" parent="WelcomeSequence/WelcomePage1/Welcome_1/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 65
text = "Next"

[node name="WelcomePage2" type="Control" parent="WelcomeSequence"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Welcome_2" type="CenterContainer" parent="WelcomeSequence/WelcomePage2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WelcomeSequence/WelcomePage2/Welcome_2"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="WelcomeSequence/WelcomePage2/Welcome_2/VBoxContainer"]
custom_minimum_size = Vector2(1250, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 65
text = "Build attractions, hire vendors, and decorate your penguin's habitat to make them happy."
horizontal_alignment = 1
autowrap_mode = 3

[node name="NextButton2" type="Button" parent="WelcomeSequence/WelcomePage2/Welcome_2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 65
text = "Next"

[node name="WelcomePage3" type="Control" parent="WelcomeSequence"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Welcome_3" type="CenterContainer" parent="WelcomeSequence/WelcomePage3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WelcomeSequence/WelcomePage3/Welcome_3"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="WelcomeSequence/WelcomePage3/Welcome_3/VBoxContainer"]
custom_minimum_size = Vector2(1250, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 65
text = "Visitors bring income during the day; at night, use it to hire vendors and decorate your park and penguin habitat."
horizontal_alignment = 1
autowrap_mode = 3

[node name="NextButton3" type="Button" parent="WelcomeSequence/WelcomePage3/Welcome_3/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 65
text = "Next"

[node name="EnterParkName" type="Control" parent="WelcomeSequence"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnterParkNameContainer" type="CenterContainer" parent="WelcomeSequence/EnterParkName"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WelcomeSequence/EnterParkName/EnterParkNameContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="WelcomeSequence/EnterParkName/EnterParkNameContainer/VBoxContainer"]
custom_minimum_size = Vector2(1250, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 65
text = "ENTER PARK NAME"
horizontal_alignment = 1
autowrap_mode = 3

[node name="LineEdit" type="LineEdit" parent="WelcomeSequence/EnterParkName/EnterParkNameContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 75
placeholder_text = "PENGUIN PARK"
alignment = 1

[node name="StartDay1Button" type="Button" parent="WelcomeSequence/EnterParkName/EnterParkNameContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1scnk")
theme_override_font_sizes/font_size = 65
text = "Start Day 1
"

[node name="GameGUI" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[connection signal="pressed" from="WelcomeSequence/WelcomePage1/Welcome_1/VBoxContainer/NextButton1" to="WelcomeSequence" method="_on_next_button_1_pressed"]
[connection signal="pressed" from="WelcomeSequence/WelcomePage2/Welcome_2/VBoxContainer/NextButton2" to="WelcomeSequence" method="_on_next_button_2_pressed"]
[connection signal="pressed" from="WelcomeSequence/WelcomePage3/Welcome_3/VBoxContainer/NextButton3" to="WelcomeSequence" method="_on_next_button_3_pressed"]
[connection signal="text_submitted" from="WelcomeSequence/EnterParkName/EnterParkNameContainer/VBoxContainer/LineEdit" to="WelcomeSequence" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="WelcomeSequence/EnterParkName/EnterParkNameContainer/VBoxContainer/StartDay1Button" to="WelcomeSequence" method="_on_start_day_1_button_pressed"]
